Gif update in post

--- a/_posts/Getting Started/2021-08-21-New-Workspace-2021.md
+++ b/_posts/Getting Started/2021-08-21-New-Workspace-2021.md
@@ -6,7 +6,7 @@ categories: [Blogger]
 tags: [personal, development]
 ---
 
-![](https://tenor.com/view/optum-united-health-group-united-health-care-uhg-optum-logo-gif-22311577)
+<div class="tenor-gif-embed" data-postid="22311577" data-share-method="host" data-aspect-ratio="1.77778" data-width="100%"><a href="https://tenor.com/view/optum-united-health-group-united-health-care-uhg-optum-logo-gif-22311577">Optum United Health Group GIF</a>from <a href="https://tenor.com/search/optum-gifs">Optum GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 
 ## Organization Change 
 So with the end of the Project at Infineon Technologies, Bangalore which was a Research Project for the company, and my third and fourth semester of the MTech program, I would be moving from Semiconductor Industry to Healthcare Industry with Optum, UHG and I am greatly excited to transition into something impactful and backend engineering.‌
