--- a/_posts/Getting Started/2020-12-11-samosa-ml.md
+++ b/_posts/Getting Started/2020-12-11-samosa-ml.md
@@ -83,7 +83,7 @@ In every project there is and should be a team lead or project in-charge and not
 
 ## Eat the Samosa (actual ones when you win)🥳 
 
-![Image](https://github.com/harshityadav95/staticfiles/blob/main/teamsamosa.png?raw=true)
+![Image](https://raw.githubusercontent.com/harshityadav95/staticfiles/main/teamsamosa.png)
 
 
 ## Reference
