--- a/_posts/Getting Started/2020-12-11-samosa-ml.md
+++ b/_posts/Getting Started/2020-12-11-samosa-ml.md
@@ -43,7 +43,7 @@ Since we had 2 months of time to prepare and no practical NLP model hands-on to 
 
 After taking a complete tour of the landscape of NLP for finding the best (kickass) solution to fit our problem we decided to use a Hybrid approach to use Tf-Idf and Word2vec for our solution. As a regular podcast listener, I also gained some really useful and relevant suggestions and brain food for the project from the Podcast [Practical Ai](https://changelog.com/practicalai) by [Chris Benson](https://chrisbenson.com/) & [Daniel Whitenack](https://datadan.io/) for how NLP problems are solved at scale in the industry
 
-PS : For learning, I also completed Google 30 Days of Google cloud program to learn how to deploy and scale ML models on the cloud, for which i got goodies and [Certificate](https://github.com/harshityadav95/staticfiles/blob/main/30%20days%20of%20google%20cloud.pdf) , and [Learning badege](https://www.qwiklabs.com/public_profiles/8f3b8802-09aa-40fe-adad-c2a1f12892c2) 
+PS : For learning, I also completed Google 30 Days of Google cloud program to learn how to deploy and scale ML models on the cloud, for which i got goodies and [Certificate](https://raw.githubusercontent.com/harshityadav95/staticfiles/main/30%20days%20of%20google%20cloud.pdf) , and [Learning badege](https://www.qwiklabs.com/public_profiles/8f3b8802-09aa-40fe-adad-c2a1f12892c2) 
 
 
 
