Folder Structure Update

--- a/_posts/ai_ml/2020-12-11-samosa-ml.md
+++ b/_posts/ai_ml/2020-12-11-samosa-ml.md
@@ -1,6 +1,6 @@
 ---
 title: Machine Learning Samosa 
-author: Harshit Yadav
+author: harshityadav95
 date: 2020-12-11 00:00:00 +0530
 categories: [Projects]
 tags: [project,Machine Learning,NLP]
