--- a/_posts/certification/2023-01-29-Microsoft-AI-900.md
+++ b/_posts/certification/2023-01-29-Microsoft-AI-900.md
@@ -1,6 +1,6 @@
 ---
 title: Completing Ai 900
-author: Harshit Yadav
+author: harshityadav95
 date: 2023-01-29 00:00:00 +0530
 categories: [Cloud]
 tags: [Azure, webdevelopment]
