--- a/_posts/Getting Started/2016-01-01-2016.md
+++ b/_posts/Getting Started/2016-01-01-2016.md
@@ -1,6 +1,6 @@
 ---
 title: 2016 
-author: Harshit Yadav
+author: harshityadav95
 date: 2016-01-01 00:00:00 +0530
 categories: [Blogger]
 tags: [personal,Bloger,Blogging]
