--- a/_posts/certification/2021-12-08-Microsoft-AZ-900.md.md
+++ b/_posts/certification/2021-12-08-Microsoft-AZ-900.md.md
@@ -1,6 +1,6 @@
 ---
 title: Completing AZ 900
-author: Harshit Yadav
+author: harshityadav95
 date: 2021-12-08 00:00:00 +0530
 categories: [Cloud]
 tags: [Azure, webdevelopment]
