--- a/_posts/timeline/2021-08-21-New-Workspace-2021.md
+++ b/_posts/timeline/2021-08-21-New-Workspace-2021.md
@@ -1,6 +1,6 @@
 ---
 title: New Workspace 2021
-author: Harshit Yadav
+author: harshityadav95
 date: 2021-08-21 00:00:00 +0530
 categories: [Projects]
 tags: [personal, development]
