--- a/_posts/ai_ml/2021-04-30-100-days-100-projects.md
+++ b/_posts/ai_ml/2021-04-30-100-days-100-projects.md
@@ -7,7 +7,7 @@ tags: [project,coursera,development]
 ---
 
 # Day 0
-![](https://2c0vo0297zmb1rhk1a1tbimd-wpengine.netdna-ssl.com/wp-content/uploads/2019/04/HiRes-17-1024x615.jpg "Samosa image")
+![Image of Samosa](https://2c0vo0297zmb1rhk1a1tbimd-wpengine.netdna-ssl.com/wp-content/uploads/2019/04/HiRes-17-1024x615.jpg)
 
 Last year when I did #100daysofMLcode #100daysofcode 🤔 (100 days of ML code is a subset of 100 days of code right 😅🤣) so I saw on various other #100  days even #365 other days challenge of being consistent  working on something one likes
 
