Image ALT Text Fix

--- a/_posts/ai_ml/2020-12-11-samosa-ml.md
+++ b/_posts/ai_ml/2020-12-11-samosa-ml.md
@@ -12,7 +12,7 @@ tags: [project,Machine Learning,NLP]
 
 
 
-![](https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Samosachutney.jpg/800px-Samosachutney.jpg)
+![harshityadav95](https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Samosachutney.jpg/800px-Samosachutney.jpg)
 
 So one fine evening of 23 September 2020 an Office Mail arrived announcing the Infineon iHack 2020 in which there were multiple tracks for each domain and had a specific problem statement for each track one had to build a solution for in a team.
 
@@ -28,7 +28,7 @@ So here is how we approached the problem of building an autocomplete ML model fr
 
 So our problem statement was to create an ML model trained on a given dataset that will generate the most accurate and relevant autocomplete give a uni-gram or bi-gram eg if the dataset includes an article on semiconductor then typing "Semiconductor" and the partial world "in" should give out [industry,intel, insulator, inductor] to achieve what we use in google autocomplete suggestion that came in 2010 around
 
-![](https://johnjohnston.info/oddsandends/social-media-is/social_media_is.gif)
+![harshityadav95](https://johnjohnston.info/oddsandends/social-media-is/social_media_is.gif)
 
 
 
