--- a/_posts/certification/2021-12-08-Microsoft-AZ-900.md.md
+++ b/_posts/certification/2021-12-08-Microsoft-AZ-900.md.md
@@ -51,4 +51,4 @@ So here is my Exam Certificate and Credentials :
 - Credly Link [Badge](https://www.credly.com/badges/433dd277-15fa-4043-a99f-7db83aeebfe8/public_url)
 
 
-![](https://raw.githubusercontent.com/harshityadav95/staticfiles/main/Screenshot%202021-12-09%20at%202.12.49%20AM.png)
+![harshityadav95](https://raw.githubusercontent.com/harshityadav95/staticfiles/main/Screenshot%202021-12-09%20at%202.12.49%20AM.png)
