--- a/_posts/certification/2023-01-29-Microsoft-AI-900.md
+++ b/_posts/certification/2023-01-29-Microsoft-AI-900.md
@@ -31,4 +31,4 @@ The included question is sufficient to pass with an above 900+ score
 
 - [Credly link for Certificate](https://www.credly.com/badges/5f789149-9879-4b4b-a632-a6eabef5cfc7/public_url)
 
-![](https://raw.githubusercontent.com/harshityadav95/staticfiles/main/Screenshot%20from%202023-01-31%2001-26-51.png)
+![harshityadav95](https://raw.githubusercontent.com/harshityadav95/staticfiles/main/Screenshot%20from%202023-01-31%2001-26-51.png)
