--- a/_posts/timeline/2021-12-31-Books-I-Read-in-2021.md
+++ b/_posts/timeline/2021-12-31-Books-I-Read-in-2021.md
@@ -13,7 +13,7 @@ With the Start of the Year 2021, the number of books I planned to finish in both
 
 The Book is Completely open and Freely available across all platforms in both text as well as podcast format.
 
-![](https://raw.githubusercontent.com/harshityadav95/staticfiles/main/image.png)
+![harshityadav95](https://raw.githubusercontent.com/harshityadav95/staticfiles/main/image.png)
 
 Source : [https://www.navalmanack.com/](https://jamesclear.com/atomic-habits)
 
@@ -21,7 +21,7 @@ Source : [https://www.navalmanack.com/](https://jamesclear.com/atomic-habits)
 
 Being in India and working in IT, since school days we know a lot more about Silicon Valley in the USA but so less about the tech industry in our neighboring country China, it is much more than Ai and how china is moving ahead at warp speed in all domains and distinct work culture and market difference in APAC and US regions
 
-![](https://m.media-amazon.com/images/P/132854639X.01._SCLZZZZZZZ_SX500_.jpg)
+![harshityadav95](https://m.media-amazon.com/images/P/132854639X.01._SCLZZZZZZZ_SX500_.jpg)
 
 Source : [Amazon Link](https://read.amazon.in/kp/embed?asin=B0795DNWCF&preview=newtab&linkCode=kpe&ref_=cm_sw_r_kb_dp_FDF5ADZ9H7VTM1ZSMG6S)
 
@@ -30,7 +30,7 @@ Source : [Amazon Link](https://read.amazon.in/kp/embed?asin=B0795DNWCF&preview=n
 
 The book is  Bestseller in every platform and in majority of recommendations list this year really liked the supporting reason and short story at the start of each chapter 
 
-![](https://images-na.ssl-images-amazon.com/images/I/51j8IiHZUtL._SX329_BO1,204,203,200_.jpg)
+![harshityadav95](https://images-na.ssl-images-amazon.com/images/I/51j8IiHZUtL._SX329_BO1,204,203,200_.jpg)
 
 Source : [https://jamesclear.com/atomic-habits](https://jamesclear.com/atomic-habits)
 
