--- a/_posts/ai_ml/2020-12-11-samosa-ml.md
+++ b/_posts/ai_ml/2020-12-11-samosa-ml.md
@@ -2,7 +2,7 @@
 title: Machine Learning Samosa 
 author: harshityadav95
 date: 2020-12-11 00:00:00 +0530
-categories: [Projects]
+categories: [AIML]
 tags: [project,Machine Learning,NLP]
 ---
 
