--- a/_posts/timeline/2021-08-21-New-Workspace-2021.md
+++ b/_posts/timeline/2021-08-21-New-Workspace-2021.md
@@ -2,7 +2,7 @@
 title: New Workspace 2021
 author: harshityadav95
 date: 2021-08-21 00:00:00 +0530
-categories: [Projects]
+categories: [Timeline]
 tags: [personal, development]
 ---
 
