--- a/_posts/ai_ml/2021-04-30-100-days-100-projects.md
+++ b/_posts/ai_ml/2021-04-30-100-days-100-projects.md
@@ -2,7 +2,7 @@
 title:  100 Days - 100 PROJECTS CHALLENGE
 author: harshityadav95
 date: 2021-04-30 00:00:00 +0530
-categories: [Projects]
+categories: [AIML]
 tags: [project,coursera,development]
 ---
 
