--- a/_posts/certification/2021-12-08-Microsoft-AZ-900.md
+++ b/_posts/certification/2021-12-08-Microsoft-AZ-900.md
@@ -2,7 +2,7 @@
 title: Completing AZ 900
 author: harshityadav95
 date: 2021-12-08 00:00:00 +0530
-categories: [Cloud]
+categories: [Certifications]
 tags: [Azure, webdevelopment]
 
 ---
