--- a/_posts/certification/2023-01-29-Microsoft-AI-900.md
+++ b/_posts/certification/2023-01-29-Microsoft-AI-900.md
@@ -2,7 +2,7 @@
 title: Completing Ai 900
 author: harshityadav95
 date: 2023-01-29 00:00:00 +0530
-categories: [Cloud]
+categories: [Certifications]
 tags: [Azure, webdevelopment]
 
 ---
