--- a/_posts/certification/2023-10-09-Microsoft-AZ-500.md
+++ b/_posts/certification/2023-10-09-Microsoft-AZ-500.md
@@ -2,7 +2,7 @@
 title: Completing AZ 500
 author: harshityadav95
 date: 2023-10-09 00:00:00 +0530
-categories: [Cloud]
+categories: [Certifications]
 tags: [Azure]
 
 ---
