--- a/_posts/timeline/2021-12-31-Books-I-Read-in-2021.md
+++ b/_posts/timeline/2021-12-31-Books-I-Read-in-2021.md
@@ -2,7 +2,7 @@
 title: Books I Read in 2021
 author: harshityadav95
 date: 2021-12-31 00:00:00 +0530
-categories: [Books]
+categories: [Timeline]
 tags: [Reading, Year Goals]
 
 ---
