Revert "Author Fix"
This reverts commit fa3fcab1937152e4b8c2a10b1f6e753f0c53763e.

--- a/_posts/Getting Started/2018-01-01-2018.md
+++ b/_posts/Getting Started/2018-01-01-2018.md
@@ -1,6 +1,6 @@
 ---
 title: 2018 
-
+author: harshityadav95
 date: 2018-01-01 00:00:00 +0530
 categories: [Blogger]
 tags: [personal,Bloger,Blogging]
