--- a/_posts/certification/2023-10-09-Microsoft-AZ-500.md
+++ b/_posts/certification/2023-10-09-Microsoft-AZ-500.md
@@ -1,6 +1,6 @@
 ---
 title: Completing AZ 500
-
+author: harshityadav95
 date: 2023-10-09 00:00:00 +0530
 categories: [Certifications]
 tags: [Azure]
